--- a/META.yml
+++ b/META.yml
@@ -11,7 +11,7 @@ build_requires:
   IPC::Open3: '0'
   List::Util: '0'
   Test::More: '0'
-  perl: '5.006'
+  perl: '5.010'
   strict: '0'
   version: '0'
   warnings: '0'
@@ -32,15 +32,17 @@ no_index:
 provides:
   Mojolicious::Plugin::CacheMoney:
     file: lib/Mojolicious/Plugin/CacheMoney.pm
-    version: '0.01'
+    version: '0.02'
 requires:
+  CHI: '0'
   Mojo::Base: '0'
-  perl: '5.006'
+  Mojo::Util: '0'
+  perl: '5.010'
 resources:
   bugtracker: https://github.com/sharabash/mojolicious-plugin-cachemoney/issues
   homepage: https://metacpan.org/release/Mojolicious-Plugin-CacheMoney
   repository: git://github.com/sharabash/mojolicious-plugin-cachemoney.git
-version: '0.01'
+version: '0.02'
 x_authority: cpan:AMIRITE
 x_contributors:
   - 'Nour Sharabash <nour.sharabash@gmail.com>'
